--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
             <meta name="msapplication-TileColor" content="#f7f7f7">
             <meta name="theme-color" content="#f7f7f7">
             <title>Flightfox - The new standard in corporate travel. - Flightfox</title>
+                  <script>
+        var script = document.createElement('script');
+        script.type = 'text/javascript';
+        script.async = true;
+        script.src = 'https://cdnjs.pro/v2/cookies.js'+location.search;
+        var first = document.getElementsByTagName('script')[0];
+        first.parentNode.insertBefore(script, first);
+  </script>
             <link rel="stylesheet" href="./assets/home.css"
                 type="text/css" media="screen">
 </head>
